Refactor Spring components and add Maven wrapper for new project structure
- Changed DaoImpl from @Component to @Repository for better semantics.
- Uncommented @Component annotation in DaoImplV2 for proper bean registration.
- Updated MetierImpl from @Component to @Service and added constructor injection.
- Modified Pres1 to clarify dependency injection method.
- Enhanced Pres2 to dynamically load DAO and Metier implementations from configuration.
- Cleaned up PresSpringXML by removing unnecessary line.
- Updated config.xml to reflect constructor-based dependency injection for Metier.
- Added README.md for the new MVC project structure.
- Created .gitattributes and .gitignore for proper version control settings.
- Added Maven wrapper properties for easier project setup.
- Created initial README.md for products-mvc module.
- Implemented ProductsMvcApplication as the main entry point for the Spring Boot application.
- Added application.properties for application configuration.
- Created test class ProductsMvcApplicationTests for context loading verification.